Updated files.
Added donation .fxml page and partial functionality.